--- a/climate-project-front/src/app/app.component.html
+++ b/climate-project-front/src/app/app.component.html
@@ -16,4 +16,5 @@
         />
     </div>
     <button type="button" (click)="onClick()"></button>
+    <img src="..\assets\Carte_vierge_départements_français.svg" alt="carte de france">
 </div> 
