--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -27,3 +27,23 @@ select {
     background-color: #fff;
     color: #495057;
 }
+
+/* carte de france */
+.carte {
+    width: 85%;
+    margin: 0 auto;
+}
+path {
+    stroke: #000000;
+    stroke-width: 1px;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-opacity: .25;
+    fill: #86aae0;
+}
+g:hover path {
+    fill: #86cce0;
+}
+g path:hover {
+    fill: #86eee0;
+}
