--- a/src/app/components/page-principale/page-principale.component.html
+++ b/src/app/components/page-principale/page-principale.component.html
@@ -1,24 +1,30 @@
-<div>
-    <div class="form-group">
-        <label for="departementSelect">Sélectionnez un département :</label>
-        <select id="departementSelect" class="form-control" [(ngModel)]="selectedDepartement">
-          <option *ngFor="let departement of listDepartement" [value]="departement.num">{{ departement.nom }}</option>
-        </select>
-      </div>
-    <div class="form-group">
-        <label for="datePicker">Sélectionnez une date :</label>
-        <input
-          id="datePicker"
-          type="date"
-          class="form-control"
-          placeholder="Sélectionnez une date"
-          [(ngModel)]="selectedDate"
-        />
-    </div>
-    <button type="button" class="button" (click)="onClick()">un button pour les tests</button>
-    
-</div> 
-<h1>vous avez sélectionné le département {{selectedDepartement}}</h1>
+
+<div class="container text-center mt-5">
+  <!-- Utilisez les classes Bootstrap pour centrer l'élément -->
+  <img class="w-25 rounded mx-auto d-block" src="../assets/logo.png" alt="logo cod fun">
+
+  <div class="form-group">
+    <label for="departementSelect">Sélectionnez un département :</label>
+    <select id="departementSelect" class="form-control mx-auto w-25" [(ngModel)]="selectedDepartement">
+      <option *ngFor="let departement of listDepartement" [value]="departement.num">{{ departement.nom }}</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label for="datePicker">Sélectionnez une date :</label>
+    <input
+      id="datePicker"
+      type="date"
+      class="form-control mx-auto"
+      placeholder="Sélectionnez une date"
+      [(ngModel)]="selectedDate"
+    />
+  </div>
+
+  <button type="button" class="btn btn-primary mx-auto" (click)="onClick()">un bouton pour les tests</button>
+
+  <h1 class="mt-3">Vous avez sélectionné le département {{selectedDepartement}}</h1>
+</div>
 <div class="carte">
   <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 667 578" xml:space="preserve">
     <a target="_blank" >
