--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,17 @@ body {
     background: linear-gradient(to right, #91fff9, #6dd7e0, #4bb1c7, #298cab, #106b8f);
     margin: 0; /* Pour enlever la marge par défaut du body */
     height: 100vh; /* Pour occuper toute la hauteur de la fenêtre */
-
+    overflow: hidden;
     color: white; /* Couleur du texte pour contraster avec le fond */
     font-family: Arial, sans-serif; /* Police de caractères */
   }
 
 input{
   width: 120px !important;
+}
+
+.monText{
+  color: #FFFFFF;
+  font-family: 'Comic Sans MS', cursive;
+  text-shadow: 2.0px 2px 2px #ffffff;
 }
