--- a/src/app/components/page-principale/page-principale.component.html
+++ b/src/app/components/page-principale/page-principale.component.html
@@ -12,6 +12,7 @@
   </div>
   <div class="swirly-wind a"></div>
   <div class="swirly-wind b"></div>
+  <app-charts [annee]="selectedDate" [dep]="selectedDepartement.num"></app-charts>
  </div>
  
 
