--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,3 +1,4 @@
-<div class="col-6">
-    <canvas id="myChart"></canvas>
+<div class="col-12 center-canvas">
+        <canvas id="myChart" class=""></canvas>
+        <button type="button" class="btn btn-primary mx-auto" onclick="window.location.href='http://127.0.0.1:4200/';">revenir au menu</button>
 </div>
