--- a/src/app/components/charts/charts.component.css
+++ b/src/app/components/charts/charts.component.css
@@ -1,8 +1,13 @@
 
 .center-canvas {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 600px; /* 100% de la hauteur de la fenêtre visible */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 600px; /* 100% de la hauteur de la fenêtre visible */
+    margin-top: 100px;
+}
+.marge-top{
+    position: relative;
+    top: 50px;
 }
