--- a/src/app/components/page-principale/page-principale.component.html
+++ b/src/app/components/page-principale/page-principale.component.html
@@ -39,7 +39,7 @@
       />
     </div>
   
-    <button type="button" class="btn btn-primary mx-auto" (click)="onClick()">un bouton pour les tests</button>
+    <button type="button" class="btn btn-primary mx-auto" (click)="onClick()">voir les recomendations</button>
   </div>
   <div class="col carte">
     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 667 578" xml:space="preserve">
