--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,5 @@ input{
 
 .monText{
   color: #FFFFFF;
-  font-family: 'Comic Sans MS', cursive;
-  text-shadow: 2.0px 2px 2px #ffffff;
+  font-family: 'Verdana', cursive;
 }
