--- a/src/app/components/charts/charts.component.css
+++ b/src/app/components/charts/charts.component.css
@@ -9,5 +9,31 @@
 }
 .marge-top{
     position: relative;
+    top: 70px;
+    bottom: 50px;
+}
+
+.center-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.date-container {
+    font-size: 24px;
+    margin-top: 20px;
+    color: #ffffff;
+}
+
+.switch{
+    position: absolute;
     top: 50px;
+    right: 200px;
+    width: 80px;
+    height: 20px;
+}
+
+.form-check-input{
+    width: 20px;
 }
