--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -1,45 +1,64 @@
 <div class="col-12">
-    <div class="col-12 center-canvas mb-3">
+    <div *ngIf="chart" class="col-12 center-canvas mb-3">
         <canvas id="myChart" class=""></canvas>
         <button type="button" class=" btn btn-primary mx-auto marge-top"
             onclick="window.location.href='http://127.0.0.1:4200/';">revenir au menu</button>
     </div>
-    <div *ngIf="weatherData; else noContent" class="container text-center">
-        <div class="row marge-top">
-            <div class="col-md-6">
-                <div class="border p-3">
-                    <h2 class="mb-3">Matin</h2>
-                    <p>Humidité: {{ weatherData.matin.humidite }}</p>
-                    <p>Pluie (1h): {{ weatherData.matin.pluie_1h }}</p>
-                    <p>Pluie (3h): {{ weatherData.matin.pluie_3h }}</p>
-                    <p>Pression: {{ weatherData.matin.pression }}</p>
-                    <p>Température: {{ weatherData.matin.temperature }}</p>
-                    <p>Direction du vent: {{ weatherData.matin.vent_direction }}</p>
-                    <p>Vent moyen: {{ weatherData.matin.vent_moyen }}</p>
-                    <p>Vent rafales: {{ weatherData.matin.vent_rafales }}</p>
+    <div *ngIf="!chart">
+        <div class="text-center">
+            <div class="date-container">{{ anneeDate | date:'dd MMMM yyyy' }}</div>
+        </div>
+        
+        <div class="center-btn">
+            <button type="button" class=" btn btn-primary mx-auto marge-top"
+            onclick="window.location.href='http://127.0.0.1:4200/';">revenir au menu</button>
+        </div>
+        <div *ngIf="weatherData; else noContent" class="container text-center marge-top">
+            <div class="row marge-top">
+                <div class="col-md-6">
+                    <div class="border p-3">
+                        <h2 class="mb-3">Matin</h2>
+                        <div>
+                            <p>Pluie (1h): {{ getRainDescription(weatherData.matin.pluie_1h) }}</p>
+                            <p>Température: {{ formatTemperature(weatherData.matin.temperature) }}</p>
+                            <p>Vent moyen: {{ getWindDescription(weatherData.matin.vent_moyen) }}</p>
+                        </div>
+                    </div>
+                </div>
+        
+                <div class="col-md-6">
+                    <div class="border p-3">
+                        <h2 class="mb-3">Apremidi</h2>
+                        <div>
+                            <p>Pluie (1h): {{ getRainDescription(weatherData.apremidi.pluie_1h) }}</p>
+                            <p>Température: {{ formatTemperature(weatherData.apremidi.temperature) }}</p>
+                            <p>Vent moyen: {{ getWindDescription(weatherData.apremidi.vent_moyen) }}</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-            <div class="col-md-6">
-                <div class="border p-3">
-                    <h2 class="mb-3">Apremidi</h2>
-                    <p>Humidité: {{ weatherData.apremidi.humidite }}</p>
-                    <p>Pluie (1h): {{ weatherData.apremidi.pluie_1h }}</p>
-                    <p>Pluie (3h): {{ weatherData.apremidi.pluie_3h }}</p>
-                    <p>Pression: {{ weatherData.apremidi.pression }}</p>
-                    <p>Température: {{ weatherData.apremidi.temperature }}</p>
-                    <p>Direction du vent: {{ weatherData.apremidi.vent_direction }}</p>
-                    <p>Vent moyen: {{ weatherData.apremidi.vent_moyen }}</p>
-                    <p>Vent rafales: {{ weatherData.apremidi.vent_rafales }}</p>
+            <div class="marge-top">
+                <h3 class="mt-3">Liste d'activitées</h3>
+                <div class="mt-3">
+                    <button class="btn btn-primary me-2" (click)="expendDataList()">{{ showAll ? 'Réduire' : 'Étendre' }}</button>
+                </div>
+                <div class="mt-3 mb-2">
+                    <button class="btn btn-primary me-2" (click)="toggleDataList()">Afficher {{ showAprem ? 'Matin' : 'Aprem' }}</button>
+                </div>
+                
+                <div class="list-group">
+                    <div *ngFor="let data of dataList; let i = index" class="list-group-item" [class.d-none]="!showAll && i > 4">
+                        {{ data.name }}
+                    </div>
                 </div>
             </div>
         </div>
+        <ng-template #noContent>
+            <div class="container">
+                <div class="text-center marge-top">
+                    <h2>Prédiction en cours...</h2>
+                </div>
+            </div>
+        </ng-template>
     </div>
-    <ng-template #noContent>
-        <div class="container">
-            <div class="text-center marge-top">
-                <h2>Prédiction en cours...</h2>
-            </div>
-        </div>
-    </ng-template>
 </div>
