--- a/src/app/components/page-principale/page-principale.component.css
+++ b/src/app/components/page-principale/page-principale.component.css
@@ -12,7 +12,7 @@
 label {
     font-size: large;
     font-weight: bold;
-    color: #48a0ff; /* Couleur primaire */
+    color: #ffffff; /* Couleur primaire */
 }
 
 input {
