correction fautes orthographe

--- a/src/app/components/charts/charts.component.html
+++ b/src/app/components/charts/charts.component.html
@@ -28,7 +28,7 @@
         
                 <div class="col-md-6">
                     <div class="border p-3">
-                        <h2 class="mb-3">Apremidi</h2>
+                        <h2 class="mb-3">Après-midi</h2>
                         <div>
                             <p>Pluie (1h): {{ getRainDescription(weatherData.apremidi.pluie_1h) }}</p>
                             <p>Température: {{ formatTemperature(weatherData.apremidi.temperature) }}</p>
