--- a/src/app/components/page-principale/page-principale.component.html
+++ b/src/app/components/page-principale/page-principale.component.html
@@ -39,7 +39,7 @@
       />
     </div>
   
-    <button *ngIf="dateIsFuture()" type="button" class="btn btn-primary mx-auto" (click)="onClick()">voir les recomendations</button>
+    <button *ngIf="dateIsFuture()" type="button" class="btn btn-primary mx-auto" (click)="onClick()">voir les recommandations</button>
     <button *ngIf="!dateIsFuture()" type="button" class="btn btn-primary mx-auto" (click)="onClick()">voir le graphe de l'année</button>
   </div>
   <div class="col carte">
